--- a/index.html
+++ b/index.html
@@ -28,53 +28,57 @@
                     <img src="Assests/images/men-small.jpeg" alt="" class="img-fluid avatar">
                     <p class="avatar-name">Murat Eren Nar</p>
                     <p class="avatar-job">Full Stack Devleloper</p>
-
-                    <div class="social-link">
-                        <div class="column-social">
-                            <a class="icon" href=""><i class="ri-github-line"></i></a>
-                        </div>
-                        <div class="column-social">
-                            <a class="icon" href=""><i class="ri-linkedin-line"></i></a>
-                        </div>
-                        <div class="column-social">
-                            <a class="icon" href=""><i class="ri-mail-line"></i></a>
-                        </div>
-                    </div>
                 </div>
             </div>
 
-            <div class="row justify-content-md-center mt-4">
-                <div class="col-sm-2">
-                    <div class="about-grid">
-                        <p class="about-text">2</p>
-                        <p class="about-title">Tecrübe</p>
+            <div class="d-flex justify-content-center social-link mb-4">
+                <div class="p-2 link">
+                    <div class="column-social">
+                        <a href=""><i class="ri-github-line"></i></a>
                     </div>
                 </div>
-                <div class="col-sm-2">
-                    <div class="about-grid">
-                        <p class="about-text">+5</p>
-                        <p class="about-title">Bitmiş Proje</p>
+                <div class="p-2 link">
+                    <div class="column-social">
+                        <a href=""><i class="ri-linkedin-line"></i></a>
                     </div>
                 </div>
-                <div class="col-sm-2">
-                    <div class="about-grid">
-                        <p class="about-text">3</p>
-                        <p class="about-title">Devam Eden Proje</p>
+                <div class="p-2 link">
+                    <div class="column-social">
+                        <a href=""><i class="ri-mail-line"></i></a>
                     </div>
+                </div>
 
+                <div class="p-2 link">
+                    <div class="column-social">
+                        <a href="#"><i class="ri-whatsapp-line"></i></a>
+                    </div>
+                </div>
+
+                <div class="p-2 link">
+                    <div class="column-social">
+                        <a href="#"><i class="ri-instagram-line"></i></a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="d-flex justify-content-center">
+                <div class="p-2 about-grid">
+                    <p class="about-text">2</p>
+                    <p class="about-title">Tecrübe</p>
+                </div>
+                <div class="p-2 about-grid">
+                    <p class="about-text">+5</p>
+                    <p class="about-title">Bitmiş Proje</p>
+                </div>
+                <div class="p-2 about-grid">
+                    <p class="about-text">3</p>
+                    <p class="about-title">Devam Eden Proje</p>
                 </div>
             </div>
 
-            <div class="row justify-content-md-center mt-4">
-                <div class="col-sm-4">
-                    <div class="d-grid gap-2">
-                        <a href="MiniBlog\index.html" class="btn btn-color"><i class="ri-archive-line"></i> Blog</a>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <a name="" id="" class="btn btn-color-social" href="#"><i class="ri-whatsapp-line"></i></a>
-                    <a name="" id="" class="btn btn-color-social" href="#"><i class="ri-instagram-line"></i></a>
-                </div>
+            <div class="d-flex justify-content-center">
+                <a href="MiniBlog\index.html" class="btn btn-color"><i class="ri-archive-line"></i> Blog</a>
             </div>
         </header>
 
