--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
 
     <body>
-        <header id="header" class="header container text-center">
+        <header id="header" class="header container text-center headline-header">
             <div class="row justify-content-md-center">
                 <div class="col-md-auto">
                     <img src="Assests/images/men-small.jpeg" alt="" class="img-fluid avatar">
@@ -83,8 +83,7 @@
         </header>
 
         <main id="main" class="main container text-center filters">
-            <div class="row justify-content-md-center main-row">
-
+            <div class="row justify-content-md-center main-row headline-main-button">
                 <ul class="filters-content">
                     <button type="button" class="filter-button btn filters-tab-active" data-target="#projects">
                         Projeler
@@ -186,7 +185,7 @@
                 <div class="filters-sections ">
                     <!-- ==================== Skills ==================== -->
                     <div class="skills" data-content id="skills">
-                        <div class="row justify-content-md-center">
+                        <div class="row justify-content-md-center headline-skill">
                             <div class="col-sm-5">
                                 <h2 class="title mb-4">Frontend</h2>
                                 <div class="skill-group">
@@ -251,6 +250,9 @@
                     &#169; Murat Eren Nar. Tüm Hakları Saklıdır
                 </div>
         </footer>
+
+        <!-- Scroll Reveal JS -->
+        <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 
         <!-- Bootstrap JavaScript Libraries -->
         <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
